--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
   <title>Website</title>
    <link rel="stylesheet" href="main.css">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+
 </head>
 <body>
   <div id="app"></div>
